# Portly

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery.rs  docker.rs  lib.rs  ssh.rs  vault.rs
src/components/: AddServerModal.tsx  ContainerCard.tsx  ContainerWebview.tsx  Dashboard.tsx  LogViewer.tsx  ServerList.tsx
src/hooks/: useContainers.ts  useDiscovery.ts  useVault.ts
src/styles/: globals.css
